@@ -11,6 +11,10 @@
 -replaced all \\ in paths with / (gotta love sed). Yes, I made sure that I only
  change paths (I looked at the list of stuff I change, before applying the sed
  command)
+-added Stub for SDLSound implementation
+-added a basic SDL Event loop
+-fixed more small issues
+=> the main menu is displayed now and the Exit and Options buttons work :)
 
 ------------
 prior changes (not complete)
